<resources>
    <string name="app_name">AndRatingBar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_size">Size</string>
    <string name="title_spacing">Spacing</string>
    <string name="title_style">Style</string>
    <string name="title_in_list">List</string>
    <string name="customize_count">customize count</string>
    <string name="customize_rating_image">customize rating image (is indicator)</string>
    <string name="customize_rating_color">customize rating color</string>
    <string name="customize_secondary_color">customize secondary color</string>
    <string name="customize_background_color">customize background color</string>
    <string name="customize_background_image">customize background image</string>
    <string name="keep_origin_color">keep origin color</string>
    <string name="left_to_right">left to right</string>
    <string name="set_spacing_by_scale_factor">set spacing by scale factor</string>
    <string name="current_factor">current factor %s</string>
    <string name="set_spacing_directly">set extra spacing (based on default spacing)</string>
    <string name="current_spacing">current extra spacing: %s dp</string>
</resources>
